--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,7 +5,7 @@
 
 <form method="post">
     <div class="form-group">
-        <label for="title">Title</label>
+        <label for="title">Edit page</label>
         <input type="text" name="title" placeholder="Post title"
                class="form-control"
                value="{{ request.form['title'] or post['title'] }}">
